--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tyommmm.github.io/React-Homework/",
+  "homepage": "https://tyommmm.github.io/TodoList-React.js",
   "name": "homework",
   "version": "0.1.0",
   "private": true,
